--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,19 @@
   "description": "Automação de Processos Penitenciáros",
   "type": "project",
   "license": "MIT",
+  "readme": "README.md",
+  "version": "1.0.0",
+  "homepage": "https://github.com/agostinhosamil/trounex",
   "scripts": {
     "phinx": "phinx",
     "create": "phinx create",
     "migrate": "phinx migrate",
     "seed": "phinx seed:run",
     "migrations": "phinx status",
-    "rollback": "phinx rollback"
+    "rollback": "phinx rollback",  
+    "jobs": [
+      "App\\Utils\\Commands\\Jobs::Handle"
+    ]
   },
   "autoload": {
     "psr-4": {
@@ -28,9 +34,12 @@
   "authors": [
     {
       "name": "Agostinho Sam'l",
-      "email": "agostinhosaml832@gmail.com"
+      "email": "agostinhosaml832@gmail.com",
+      "homepage": "https://agostinhosamil.github.io",
+      "role": "developer"
     }
   ],
+  "prefer-stable": true,
   "minimum-stability": "stable",
   "require": {
     "php": ">=7.2.31",
