fix: change the way mail service caches mail list

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "agostinhosaml/trounex",
-  "description": "Automação de Processos Penitenciáros",
+  "description": "Trounex Web App",
   "type": "project",
   "license": "MIT",
   "readme": "README.md",
